# clarification-trees

./: .gitignore  README.md  dataset_test.ipynb  pyproject.toml  train.py
src/clarification_trees/: dataset.py  dialog_tree.py  harness.py
src/clarification_trees/conf/: config.yaml
src/clarification_trees/conf/answer_model/: qwen_3_vl_4b.yaml  shared_hf_model.yaml
src/clarification_trees/conf/clarification_model/: qwen_3_vl_2b.yaml  qwen_3_vl_8b.yaml
src/clarification_trees/models/: __init__.py  hf_transformers.py  model_interface.py
